fix bug dark mode

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -237,3 +237,252 @@ body {
         border-radius: 10px;
     }
 }
+
+/* dark mode handle */
+
+@media screen and (prefers-color-scheme: light) {
+    @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400&display=swap");
+
+    html {
+        scroll-behavior: smooth;
+    }
+
+    body {
+        font-family: "Ubuntu", "Robot" !important;
+    }
+
+    .jumbotron {
+        background-image: url("../img/background.png");
+        background-size: cover;
+        background-attachment: fixed;
+    }
+
+    .navbar {
+        background-color: white !important;
+        padding-bottom: 0;
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12),
+            0 4px 8px rgba(0, 0, 0, 0.06);
+    }
+
+    .navbar a {
+        color: black !important;
+        font-weight: bolder;
+    }
+
+    .navbar-dark .navbar-toggler-icon {
+        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0,0,0, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+    }
+
+    #header .nav-link {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    #header .nav-link:hover {
+        background-color: lightgray;
+        border-radius: 50%;
+    }
+
+    .jumbotron {
+        margin-bottom: 0;
+        /* background: white; */
+        border-radius: 0;
+    }
+
+    #home .jumbotron {
+        text-align: left;
+        font-size: larger;
+        color: black;
+    }
+
+    #home img {
+        width: 100%;
+    }
+
+    #home p {
+        font-size: xx-large;
+        margin: 0;
+    }
+
+    .social-media a {
+        color: black;
+        transition: transform 0.9s;
+    }
+
+    .social-media a:hover {
+        color: grey;
+    }
+
+    .btn,
+    .btn:focus {
+        background-color: lightgray;
+        border-color: black;
+        color: black;
+        box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.4);
+    }
+
+    .btn:hover {
+        background-color: black;
+        border-color: black;
+        color: lightgray;
+    }
+
+    .btn-primary:not(:disabled):not(.disabled).active,
+    .btn-primary:not(:disabled):not(.disabled):active,
+    .show > .btn-primary.dropdown-toggle {
+        background-color: lightgray;
+        border-color: black;
+        color: black;
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12),
+            0 4px 8px rgba(0, 0, 0, 0.06);
+    }
+
+    .btn-primary:not(:disabled):not(.disabled).active:focus,
+    .btn-primary:not(:disabled):not(.disabled):active:focus,
+    .show > .btn-primary.dropdown-toggle:focus {
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12),
+            0 4px 8px rgba(0, 0, 0, 0.06);
+    }
+
+    .zoomIn h1 {
+        font-weight: bolder;
+    }
+
+    #about img {
+        width: 70%;
+    }
+
+    #about p {
+        font-size: xx-large;
+    }
+
+    #works img,
+    #certificates img {
+        width: 80%;
+    }
+
+    #works #worksIcon .card,
+    #certificates #certificatesIcon .card {
+        box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.4);
+        margin: 10px;
+        transition: transform 0.2s;
+        width: 90%;
+    }
+
+    #works #worksIcon .card:hover,
+    #certificates #certificatesIcon .card:hover {
+        cursor: pointer;
+        transform: scale(1.1);
+    }
+
+    #works #worksIcon img,
+    #certificates #certificatesIcon img {
+        width: 90%;
+    }
+
+    #portfolios .card {
+        box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.4);
+        transition: transform 0.2s;
+        width: 80%;
+    }
+
+    #portfolios .card:hover {
+        cursor: pointer;
+        transform: scale(1.1);
+    }
+
+    #portfolios .card-body {
+        background-color: lightgray;
+    }
+
+    #portfolios img {
+        width: 60%;
+        margin: 10px auto;
+    }
+
+    #contact img {
+        width: 90%;
+    }
+
+    .form-control:focus {
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12),
+            0 4px 8px rgba(0, 0, 0, 0.06);
+        border-color: black;
+    }
+
+    #contact .card {
+        padding: 15px;
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12),
+            0 4px 8px rgba(0, 0, 0, 0.06);
+        background-color: white;
+        border-color: black;
+        margin: 25px auto;
+    }
+
+    #contact button {
+        width: 100px;
+        float: right;
+    }
+
+    #contact p {
+        font-size: xx-large;
+    }
+
+    .alert {
+        margin: 10px 0;
+    }
+
+    #footer .jumbotron {
+        background: lightgray !important;
+        padding: 10px;
+    }
+
+    #footer img {
+        width: 150px;
+    }
+
+    #quotes img {
+        width: 100%;
+    }
+
+    #quotes p {
+        font-size: xx-large;
+    }
+
+    /* Extra small devices (portrait phones, less than 576px) */
+    @media (max-width: 576px) {
+        #home p {
+            text-align: center;
+        }
+        #home .social-media {
+            text-align: center;
+        }
+
+        #home h1,
+        #about h1,
+        #works h1,
+        #portfolios h1,
+        #certificates h1,
+        #quotes h1,
+        #contact h1 {
+            margin-top: 35px;
+            text-align: center;
+        }
+
+        #about p,
+        #quotes p,
+        #home p {
+            font-size: x-large;
+        }
+
+        #portfolios .card {
+            width: 110%;
+        }
+    }
+
+    @media (max-width: 992px) {
+        #header .nav-link:hover {
+            border-radius: 10px;
+        }
+    }
+}
